Width correction for pong-wrap

--- a/app/src/components/Pong/Pong.module.css
+++ b/app/src/components/Pong/Pong.module.css
@@ -6,6 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    width: 100%;
 }
 
 .pong-text {
